--- a/public/styles.css
+++ b/public/styles.css
@@ -38,7 +38,7 @@ input[type="submit"] {
     display: inline-block;
     font-size: 12px;
     font-weight: 700;
-    letter-spacing: 0.4px;
+    letter-spacing: .4px;
     min-height: 40px;
     min-width: 80px;
     padding: 9px 20px 10px;
