--- a/public/styles.css
+++ b/public/styles.css
@@ -52,3 +52,27 @@ input[type="submit"]:hover {
     background-color: #f71414;
     cursor: pointer;
 }
+
+.progressBar {
+    width: 80%;
+    height: 30px; /* Adjust the height as needed */
+    background-color: #adadad;
+    margin: 0 auto;
+    position: relative; /* Add this line to make the progressMessage positioned relative to the progressBar */
+}
+
+.movingProgress {
+    width: 0;
+    height: 100%;
+    background-color: #f71414;
+}
+
+.progressMessage {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    line-height: 30px; /* Adjust the line-height to vertically center the text */
+}
